Fix z-indexes

--- a/source/stylesheets/overlay.sass
+++ b/source/stylesheets/overlay.sass
@@ -10,7 +10,7 @@
   top: 0
   visibility: hidden
   width: 100%
-  z-index: 5
+  z-index: 11
 
   &[aria-hidden="false"]
     +transition(opacity 0.4s)
@@ -30,7 +30,6 @@
     position: absolute
     right: 0
     top: 0
-    z-index: 5
 
   .overlay_content
     height: 100%
@@ -46,7 +45,6 @@
     right: 40px
     top: 26px
     width: 40px
-    z-index: 6
 
     &:hover
       color: $header-text-hover-color
@@ -62,7 +60,6 @@
     max-width: 80%
     opacity: 0
     position: relative
-    z-index: 6
     visibility: hidden
 
     li
